[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/room_cell.gd" type="Script" id=1]
[ext_resource path="res://sprites/colored_tilemap_packed1.png" type="Texture" id=2]
[ext_resource path="res://sprites/shaders/green_silhouette.tres" type="Material" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 8, 8 )

[node name="cell" type="Node2D" groups=[
"cells",
]]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="."]
material = ExtResource( 3 )
margin_right = 60.0
margin_bottom = 60.0
mouse_filter = 0
texture = SubResource( 1 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="gui_input" from="TextureRect" to="." method="_on_TextureRect_gui_input"]
[connection signal="mouse_entered" from="TextureRect" to="." method="_on_TextureRect_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect" to="." method="_on_TextureRect_mouse_exited"]
